terraform/alb.tf
resource "aws_lb" "example" {
  name                       = "${var.aws_resource_prefix}-lb"
  load_balancer_type         = "application"
  internal                   = false
  idle_timeout               = 60
  enable_deletion_protection = true
  subnets = [
    aws_subnet.public_1a.id,
    aws_subnet.public_1c.id,
  ]
  access_logs {
    bucket  = aws_s3_bucket.alb_log.id
    enabled = true
  }
  security_groups = [
    module.http_sg.security_group_id,
    module.https_sg.security_group_id,
    module.http_redirect_sg.security_group_id,
  ]
}

module "http_sg" {
  source      = "./modules/security_group"
  name        = "http-sg"
  vpc_id      = aws_vpc.example.id
  port        = 80
  cidr_blocks = ["0.0.0.0/0"]
}

module "https_sg" {
  source      = "./modules/security_group"
  name        = "https-sg"
  vpc_id      = aws_vpc.example.id
  port        = 443
  cidr_blocks = ["0.0.0.0/0"]
}

module "http_redirect_sg" {
  source      = "./modules/security_group"
  name        = "http-redirect-sg"
  vpc_id      = aws_vpc.example.id
  port        = 8080
  cidr_blocks = ["0.0.0.0/0"]
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.example.arn
  port              = "80"
  protocol          = "HTTP"
  default_action {
    type = "redirect"
    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}

# resource "aws_lb_listener" "https" {
#   load_balancer_arn = aws_lb.example.arn
#   port              = "443"
#   protocol          = "HTTPS"
#   certificate_arn   = aws_acm_certificate.example.arn
#   ssl_policy        = "ELBSecurityPolicy-2016-08"
#   default_action {
#     type = "forward"
#     target_group_arn = aws_lb_target_group.example.arn
#   }
# }

# resource "aws_lb_listener_rule" "example" {
#   listener_arn = aws_lb_listener.https.arn
#   priority     = 100
#   action {
#     type = "forward"
#     target_group_arn = aws_lb_target_group.example.arn
#   }
#   condition {
#     path_pattern {
#       values = ["/*"]
#     }
#   }
# }

# resource "aws_lb_target_group" "example" {
#   name                 = "${var.aws_resource_prefix}-tg"
#   target_type          = "ip"
#   vpc_id               = aws_vpc.example.id
#   port                 = 80
#   protocol             = "HTTP"
#   deregistration_delay = 300
#   health_check {
#     path                = "/"
#     healthy_threshold   = 10
#     unhealthy_threshold = 4
#     timeout             = 20
#     interval            = 60
#     matcher             = 200
#     port                = "traffic-port"
#     protocol            = "HTTP"
#   }
#   depends_on = [aws_lb.example]
# }
